--- a/src/SCHOOL/contactsch.css
+++ b/src/SCHOOL/contactsch.css
@@ -23,41 +23,51 @@
   align-items: center; */
 }
 .content-contact {
-
+  color: #fff;
+  padding: 0 20px;            /* prevent text from touching edges */
     position: absolute;
-    top:45%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, 0%);
+      text-align: center;
+            background-color: gray;
+
 }
 
 .content-contact h2 {
-    font-size: 6rem;
+    font-size: 3.5rem;
+  margin-bottom: 15px;
+    color: #fff;
+}
+
+.content-contact p {
+  
+    font-size: 2rem;
     color: #fff;
 }
 
 
 @media screen and (max-width:768px) {
-.contactpage{
-margin-bottom:110px ;
-}
 .container-image{
-  width: 100%;
+  /* width: 100%; */
     /* min-height: 100%; */
+    min-height: 400px;
 
-/* background-color: #fff; */
 }
-/* .content-about {
-    position: absolute;
-} */
  .content-contact {
-
-    top:25%;
-   
-}
-  .content-home h2 {
-        font-size: 4rem;
-        text-align: center;
-    }
+   position: absolute;
+  width: 100%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+ }
+  
+  .content-contact h2 {
+    /* width: 90%; */
+    font-size: 2rem;
+  }
+  .content-contact p {
+    font-size: 1.5rem;
+  }
 
 }
 
@@ -92,7 +102,9 @@ ul{
 
     /* padding: 120px; */
     color: #fff;
-    background-color: #8ae79a;
+    background-color:  #a9ce64;
+    /* background-color:  #9fca4f; */
+
     border-radius: 10px;
     margin-top: 0px;
 
@@ -195,7 +207,7 @@ text-align: right;
     /* height: 400px; */
         border-radius: 10px;
 
-    background-color: #44e2a0;
+    background-color:  #a9ce64;
     padding: 20px;
 }
 
@@ -300,6 +312,7 @@ text-align: right;
     border: none;
     border-radius: 5px;
     color: white;
-    background-color: rgb(93, 172, 93);
+    background-color:  #78ad15;
+
     font-size: 17px;
 }
