--- a/src/SCHOOL/eventmore.css
+++ b/src/SCHOOL/eventmore.css
@@ -40,7 +40,7 @@
   font-weight: 500;
   /* margin-bottom: 120px; */
   padding: 20px 20px 50px 0px;
-  color: rgb(55, 168, 11);
+    color:  #a9ce64;
   /* background-color: rgb(55, 168, 11); */
   /* margin-bottom: 10px; */
 }
