--- a/src/SCHOOL/homesch.css
+++ b/src/SCHOOL/homesch.css
@@ -15,46 +15,66 @@
   min-height: 550px;
     margin-top: 80px;
     z-index: 1;   /* put the image layer lower */
+
      /* height: 50vh; */
   /* width: 1550px; */
     /* min-height: 550px; */
     /* background-size: cover; */
 /* display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
+    text-align: center; */
+
 }
 .content-home {
-
+  color: #fff;
+  padding: 0 20px;            /* prevent text from touching edges */
     position: absolute;
-    top:45%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, 0%);
+      text-align: center;
+      background-color: gray;
 }
 
 .content-home h2 {
-    font-size: 6rem;
+    font-size: 3.5rem;
+  margin-bottom: 15px;
     color: #fff;
 }
 
+.content-home p {
+  
+    font-size: 2rem;
+    color: #fff;
+}
 
 @media screen and (max-width:768px) {
-.container-image-home{
+/* .container-image-home{
   width: 100%;
-  }
+  } */
 .container-image{
   /* width: 100%; */
     /* min-height: 100%; */
+    min-height: 400px;
 
-/* background-color: #fff; */
 }
-/* .content-about {
-    position: absolute;
-} */
+ .content-home {
+   position: absolute;
+  width: 100%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+ }
+  
   .content-home h2 {
-        font-size: 4rem;
-        text-align: center;
-    }
-
+    /* width: 90%; */
+    font-size: 2rem;
+  }
+  .content-home p {
+    font-size: 1.5rem;
+  }
+ 
+ 
 }
 
 
@@ -121,7 +141,7 @@ margin-left: 190px;
   font-size: 28px;
   font-weight: 500;
   padding: 30px 0px 0px 0px;
-  color: rgb(55, 168, 11);
+    color:  #a9ce64;
   /* background-color: rgb(55, 168, 11); */
   /* margin-bottom: 10px; */
 }
@@ -170,7 +190,7 @@ padding-right:20px ;
 .img2-title-text-home {
   display: flex;
   flex-wrap: wrap;
-  gap: 120px;
+  gap: 180px;
   /* width: 300px; */
   /* background-color: rgb(55, 168, 11); */
 }
@@ -181,7 +201,6 @@ padding-right:20px ;
   padding: 20px 90px 0px 0px;
   margin-left: 30px;
 
-  color: rgb(55, 168, 11);
   /* background-color: rgb(55, 168, 11); */
   /* margin-bottom: 10px; */
 }
@@ -192,7 +211,7 @@ padding-right:20px ;
   font-size: 28px;
   font-weight: 500;
   padding: 20px 0px 0px 0px;
-  color: rgb(55, 168, 11);
+    color:  #a9ce64;
   /* background-color: rgb(55, 168, 11); */
   /* margin-bottom: 10px; */
 }
@@ -262,6 +281,7 @@ justify-content: center;
   justify-content: center;
   align-items: center;
   margin: 10px;
+  padding-bottom: 30px;
   gap: 30px;
 }
 
@@ -279,7 +299,9 @@ justify-content: center;
 
   border: 1px solid rgb(103, 231, 125);
   color: white;
-  background-color: rgb(59, 211, 72);
+  /* background-color:  #96c442; */
+    background-color:  #9fca4f;
+
 }
 
 
@@ -327,9 +349,9 @@ font-weight: 500; */
   /* margin-left: 690px; */
   margin-bottom: 10px;
   color: white;
-  background-color: rgba(12, 153, 19, 0.952);
+  background-color:  #C3DC93;
   &:hover {
-    background-color: rgba(102, 240, 148, 0.918);
+    background-color: rgba(142, 223, 95, 0.918);
   }
 }
 /* .@media only screen and (max-width: 900px) {
