fix: move package.json or set root directory

--- a/src/SCHOOL/homesch.css
+++ b/src/SCHOOL/homesch.css
@@ -35,6 +35,8 @@
     transform: translate(-50%, 0%);
       text-align: center;
       background-color: gray;
+        opacity: 0.8;
+
 }
 
 .content-home h2 {
